--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,13 @@ jobs:
     - run: |
         touch .env
         echo "${{ secrets.PROD_ENV_FILE }}" > .env
-    - run: pm2 restart BackendAPI
+    #- run: pm2 restart BackendAPI
+    - run: |
+        # Check if BackendAPI is running
+        if pm2 list | grep -q 'BackendAPI'; then
+          echo "BackendAPI is running, restarting..."
+          pm2 restart BackendAPI
+        else
+          echo "BackendAPI is not running, starting..."
+          pm2 start BackendAPI
+        fi
