--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest",
+        "test:coverage": "jest --coverage"
     },
     "keywords": [],
     "author": "",
@@ -16,5 +17,8 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongoose": "^7.1.1"
+    },
+    "devDependencies": {
+      "jest": "^27.0.0"
     }
 }
