--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "scripts": {
         "start": "node server.js",
         "dev": "nodemon server.js",
-        "test": "jest",
-        "test:coverage": "jest --coverage"
+        "test": "jest --passWithNoTests",
+        "test:coverage": "jest --coverage --passWithNoTests"
     },
     "keywords": [],
     "author": "",
@@ -20,5 +20,11 @@
     },
     "devDependencies": {
       "jest": "^27.0.0"
-    }
+    },
+    "jest": {
+    "testMatch": [
+      "**/tests/**/*.[jt]s?(x)",
+      "**/?(*.)+(spec|test).[tj]s?(x)"
+    ]
+  }
 }
