--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "mongoose": "^7.1.1"
+        "mongoose": "^7.1.1",
+        "eslint": "^9.8.0"
     },
     "devDependencies": {
       "jest": "^27.0.0"
