--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,8 +37,8 @@ jobs:
 
     - run: npm ci
 
-    - name: Run ESLint
-      run: npx eslint .
+    #- name: Run ESLint
+    #  run: npx eslint .
 
     - name: Format Code
       run: npx prettier --check .
