--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -43,6 +43,15 @@ jobs:
     - name: Format Code
       run: npx prettier --check .
 
+    - name: Fix Formatting Issues
+      run: |
+        npx prettier --write .
+        git config --global user.name "github-actions"
+        git config --global user.email "actions@github.com"
+        git add .
+        git commit -m "Auto-fix formatting issues" || echo "No changes to commit"
+        git push
+      
     - run: |
         touch .env
         echo "${{ secrets.PROD_ENV_FILE }}" > .env
