--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,14 +42,14 @@ jobs:
       - name: Format Code
         run: npx prettier --check .
 
-      - name: Fix Formatting Issues
-        run: |
-          npx prettier --write .
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
-          git add .
-          git commit -m "Auto-fix formatting issues" || echo "No changes to commit"
-          git push
+      #- name: Fix Formatting Issues
+      #  run: |
+      #    npx prettier --write .
+      #    git config --global user.name "github-actions"
+      #    git config --global user.email "actions@github.com"
+      #    git add .
+      #    git commit -m "Auto-fix formatting issues" || echo "No changes to commit"
+      #    git push
 
       - run: |
           touch .env
