--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,6 +34,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
+      
+
       - run: npm ci
 
       #- name: Run ESLint
@@ -65,6 +67,11 @@ jobs:
 
       - name: Run Vulnerability Scan
         run: npm audit --production --audit-level=high
+
+      - uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}   
     
       - name: Check and Restart BackendAPI with PM2
         run: |
