--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -72,6 +72,11 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}   
+
+      - name: Trivy file scan
+        run: |
+          # Scanning files
+          trivy fs . > trivyfs.txt 
     
       - name: Check and Restart BackendAPI with PM2
         run: |
