--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -74,9 +74,7 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}   
 
       - name: Trivy file scan
-        run: |
-          # Scanning files
-          trivy fs . > trivyfs.txt 
+        run: trivy fs . > trivyfs.txt 
     
       - name: Check and Restart BackendAPI with PM2
         run: |
